2010-05-16  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: do not cache referenced assemblies until it's
	safe.

2010-05-15  Marek Habersack  <mhabersack@novell.com>

	* RouteValueExpressionBuilder.cs: added

	* RouteUrlExpressionBuilder.cs: implemented

2010-05-12  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: implemented a 4.0 feature - pre-application
	start methods.

2010-05-07  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: implemented 4.0 methods {Create,Read}CacheFile.
	Fixed signature of the GetVirtualPathDependencies method.
	Implemented 4.0 methods GetGlobalAsaxType, AddReferencedAssembly,
	GetObjectFactory, GetCachedBuildDependencySet and properties
	BatchCompilationEnabled, TargetFramework

2010-04-29  Marek Habersack  <mhabersack@novell.com>

	* AppResourcesAssemblyBuilder.cs: when running on windows,
	SetAlPath must return al.exe path with a trailing space, or
	otherwise the process won't start. Fixes bug #600691

2010-04-12  Marek Habersack  <mhabersack@novell.com>

	* PageCompiler.cs: if EnableViewStateMac is set in the page
	source, generate relevant code.

2010-03-17  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs, AspParser.cs, TemplateControlCompiler.cs, TagType.cs, CodeRenderBuilder.cs: implemented the new <%: %> 4.0 html-encoded code render expression.

2010-03-06  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: AssignPropertyForResources localizes
	a property even if the Localized attribute is absent. If the
	attribute is present, it checks its IsLocalizable property to
	decide if localization should be performed. Fixes bug #585933

2010-03-04  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: do less work in the static constructor

2010-02-27  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: count only builds of updated files before
	unloading the app domain. Fixes bug #581459

2010-02-19  Marek Habersack  <mhabersack@novell.com>
