@@ -45,6 +45,9 @@ namespace System.Web.Compilation
 {
 	public abstract class BuildProvider
 	{
+#if NET_4_0
+		static Dictionary <string, Type> registeredBuildProviderTypes;
+#endif
 		ArrayList ref_assemblies;
 		
 		ICollection vpath_deps;
@@ -133,7 +136,45 @@ namespace System.Web.Compilation
 			// MS also throws a NullReferenceException here when not hosted.
 			return VirtualPathProvider.OpenFile (virtualPath);
 		}
-		
+#if NET_4_0
+		public static void RegisterBuildProvider (string extension, Type providerType)
+		{
+			if (String.IsNullOrEmpty (extension))
+				throw new ArgumentException ("The string parameter 'extension' cannot be null or empty.", "extension");
+
+			if (providerType == null)
+				throw new ArgumentNullException ("providerType");
+
+			if (!typeof (BuildProvider).IsAssignableFrom (providerType))
+				throw new ArgumentException ("The parameter 'providerType' is invalid", "providerType");
+
+			if (!BuildManager.PreStartMethodsRunning)
+				throw new InvalidOperationException ("This method cannot be called during the application's pre-start initialization stage.");
+
+			if (registeredBuildProviderTypes == null)
+				registeredBuildProviderTypes = new Dictionary <string, Type> (StringComparer.OrdinalIgnoreCase);
+
+			registeredBuildProviderTypes [extension] = providerType;
+		}
+
+		internal static BuildProvider GetProviderInstanceForExtension (string extension)
+		{
+			Type type = null;
+
+			if (registeredBuildProviderTypes == null || !registeredBuildProviderTypes.TryGetValue (extension, out type) || type == null) {
+				var cs = WebConfigurationManager.GetSection ("system.web/compilation") as CompilationSection;
+				BuildProviderCollection bpcoll = cs != null ? cs.BuildProviders : null;
+				global::System.Web.Configuration.BuildProvider bpcfg = bpcoll != null ? bpcoll [extension] : null;
+				if (bpcfg != null)
+					type = HttpApplication.LoadType (bpcfg.Type);
+			}	
+			
+			if (type == null)
+				return null;
+				
+			return Activator.CreateInstance (type, null) as global::System.Web.Compilation.BuildProvider;
+		}
+#endif
 		public virtual CompilerType CodeCompilerType {
 			get { return null; } // Documented to return null
 		}
