@@ -68,6 +68,7 @@ System.Web.Compilation/TemplateControlCompilerTest.cs
 System.Web.Compilation/AppSettingsExpressionBuilderTest.cs
 System.Web.Compilation/AppResourcesCompilerTest.cs
 System.Web.Compilation/RouteUrlExpressionBuilderTest.cs
+System.Web.Compilation/BuildProviderTest.cs
 System.Web.Configuration/AnonymousIdentificationSectionTest.cs
 System.Web.Configuration/AssemblyCollectionTest.cs
 System.Web.Configuration/AssemblyInfoTest.cs
