@@ -1,0 +1,1 @@
+﻿This is some test input for FooBuildProvider
