@@ -1,3 +1,7 @@
+2010-05-17  Marek Habersack  <mhabersack@novell.com>
+
+	* BuildProvider.cs: made the Extension property case-insensitive
+
 2010-04-09  Marek Habersack  <mhabersack@novell.com>
 
 	* WebConfigurationManager.cs: GetSection properly processes paths
